syntax = "proto3";

//package user; //Used by non-Java languages

option java_package = "com.javastub.grpc";
//option java_multiple_files = true;
//option java_outer_classname = "UserProto";

import "google/protobuf/empty.proto";

service UserService {

  //unary
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (google.protobuf.Empty) returns (LogoutResponse);

  //server streaming
  rpc getLiveUpdates(StreamRequest) returns (stream StreamResponse);

  //client streaming
  rpc ClientStreamingExample(stream ClientStreamingReq) returns(ClientStreamingResp);

  //bidirectional streaming
  rpc BidirectionalStream(stream BidirectionalStreamReq) returns (stream BidirectionalStreamResp);

}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

message LogoutResponse {
  string message = 1;
}

message StreamRequest{
  string name = 1;
  bool start = 2;
}

message StreamResponse{
  string data = 1;
  bool status = 2;
}

message ClientStreamingReq{
  int32 price = 1;
  int32 quantity = 2;
  bool status = 3;

}

message ClientStreamingResp{
  int32 totalValue =1;
  bool status = 2;

}

message BidirectionalStreamReq{
  string requestData = 1;
}

message BidirectionalStreamResp{
  string responseData = 1;
  bool status = 2;
  string timestamp = 3;
}


